--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = 2025.02/amd64/source
 	url = https://github.com/NEWSLabNTU/autoware.git
 	branch = 2025.02-ws
+[submodule "1.5.0/amd64/source"]
+	path = 1.5.0/amd64/source
+	url = https://github.com/NEWSLabNTU/autoware.git
+	branch = 1.5.0-ws
