Fix Debian build scripts for version 2025.02

--- a/2025.02/packages/autoware-config/.gitignore
+++ b/2025.02/packages/autoware-config/.gitignore
@@ -1,13 +1,9 @@
-# Downloaded theme files (from official Autoware repo)
-src/
-downloads/
-
 # Build artifacts
 *.deb
 
 # Debhelper build artifacts
 debian/.debhelper/
 debian/*.substvars
-debian/autoware-theme/
+debian/autoware-config/
 debian/debhelper-build-stamp
 debian/files
