--- a/1.5.0/packages/autoware-full/.gitignore
+++ b/1.5.0/packages/autoware-full/.gitignore
@@ -1,2 +1,9 @@
 # Build artifacts
 *.deb
+
+# Debhelper build artifacts
+debian/.debhelper/
+debian/*.substvars
+debian/autoware-full/
+debian/debhelper-build-stamp
+debian/files
