--- a/1.5.0/packages/autoware-runtime/.gitignore
+++ b/1.5.0/packages/autoware-runtime/.gitignore
@@ -1,2 +1,9 @@
 # Build artifacts
 *.deb
+
+# Debhelper build artifacts
+debian/.debhelper/
+debian/*.substvars
+debian/autoware-runtime/
+debian/debhelper-build-stamp
+debian/files
