--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = 1.5.0/amd64/source
 	url = https://github.com/NEWSLabNTU/autoware.git
 	branch = 1.5.0-ws
+[submodule "2025.02/arm64/source"]
+	path = 2025.02/arm64/source
+	url = https://github.com/NEWSLabNTU/autoware.git
+	branch = 2025.02-ws
