--- a/.gitmodules
+++ b/.gitmodules
@@ -6,11 +6,11 @@
 	path = 1.5.0/amd64/source
 	url = https://github.com/NEWSLabNTU/autoware.git
 	branch = 1.5.0-ws
-[submodule "2025.02/arm64/source"]
+[submodule "2025.02/jp60/source"]
 	path = 2025.02/jp60/source
 	url = https://github.com/NEWSLabNTU/autoware.git
 	branch = 2025.02-ws
-[submodule "1.5.0/arm64/source"]
+[submodule "1.5.0/jp62/source"]
 	path = 1.5.0/jp62/source
 	url = https://github.com/NEWSLabNTU/autoware.git
 	branch = 1.5.0-ws
