--- a/1.5.0/amd64/config.yaml
+++ b/1.5.0/amd64/config.yaml
@@ -6,7 +6,7 @@ docker:
   dockerfile: Dockerfile
 
   # Optional: Custom image name for caching
-  image_name: autoware-1.5.0-builder
+  image_name: autoware-1.5.0-amd64-builder
 
 # Output configuration with descriptive name
 output:
