--- a/2025.02/amd64/config.yaml
+++ b/2025.02/amd64/config.yaml
@@ -6,7 +6,7 @@ docker:
   dockerfile: Dockerfile
 
   # Optional: Custom image name for caching
-  image_name: autoware-2025.02-builder
+  image_name: autoware-2025.02-amd64-builder
 
 # Output configuration with descriptive name
 output:
