--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@ repo/
 *.buildinfo
 *.changes
 
+# Debhelper build state (in debian-overrides)
+**/debian/.debhelper/
+**/debian/debhelper-build-stamp
+**/debian/*.substvars
+**/debian/files
+**/debian/*.debhelper.log
+**/debian/ros-humble-*/
+
 # Editor files
 *~
 .*~
