--- a/1.5.0/jp62/debian-overrides/autoware_calibration_status_classifier/debian/rules
+++ b/1.5.0/jp62/debian-overrides/autoware_calibration_status_classifier/debian/rules
@@ -11,6 +11,8 @@ SHELL := /bin/bash
 
 # Uncomment this to turn on verbose mode.
 export DH_VERBOSE=1
+# Disable LTO (Link Time Optimization) - causes conflicts with CUDA fatbin symbols
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all reproducible=+fixfilepath optimize=-lto
 # TODO: remove the LDFLAGS override.  It's here to avoid esoteric problems
 # of this sort:
 #  https://code.ros.org/trac/ros/ticket/2977
