Remove {2025.02,1.5.0}/arm64 build scripts

--- a/1.5.0/justfile
+++ b/1.5.0/justfile
@@ -4,10 +4,6 @@
 build-amd64:
     cd amd64 && just build
 
-# Build ROS packages for generic arm64
-build-arm64:
-    cd arm64 && just build
-
 # Build ROS packages for JetPack 6.2 (Jetson Orin)
 build-jp62:
     cd jp62 && just build
@@ -25,13 +21,11 @@ build-packages:
 
 # Consolidate all .deb files to output directory
 consolidate:
-    mkdir -p output/amd64 output/arm64 output/jp62 output/all
+    mkdir -p output/amd64 output/jp62 output/all
     @echo "Copying ROS packages from amd64 build..."
-    -cp amd64/build/packages/*.deb output/amd64/ 2>/dev/null
-    @echo "Copying ROS packages from arm64 build..."
-    -cp arm64/build/packages/*.deb output/arm64/ 2>/dev/null
+    -cp amd64/build/dist/*.deb output/amd64/ 2>/dev/null
     @echo "Copying ROS packages from jp62 build..."
-    -cp jp62/build/packages/*.deb output/jp62/ 2>/dev/null
+    -cp jp62/build/dist/*.deb output/jp62/ 2>/dev/null
     @echo "Copying meta-packages..."
     -mv packages/*/*.deb output/all/ 2>/dev/null
     @echo "Done. Check output/ directory."
@@ -41,7 +35,6 @@ clean:
     rm -rf output/
     rm -f packages/*/*.deb packages/*/*.buildinfo packages/*/*.changes
     cd amd64 && just clean 2>/dev/null || true
-    cd arm64 && just clean 2>/dev/null || true
     cd jp62 && just clean 2>/dev/null || true
 
 # Build everything for amd64
