--- a/2025.02/justfile
+++ b/2025.02/justfile
@@ -1,5 +1,9 @@
 # Autoware 2025.02 Build Automation
 
+# Default recipe: list all available recipes
+default:
+    @just --list
+
 # Build ROS packages for amd64
 build-amd64:
     cd amd64 && just build
