Revise 1.5.0/amd64 meta pacakges

--- a/1.5.0/amd64/packages/autoware-full/debian/control
+++ b/1.5.0/amd64/packages/autoware-full/debian/control
@@ -10,8 +10,9 @@ Architecture: any
 Depends: ${misc:Depends},
          autoware-config,
          autoware-theme,
+         autoware-data,
          autoware-runtime
 Description: Autoware complete installation meta-package
  This meta-package installs all Autoware components including
- configuration files, visual theme, and runtime packages.
+ configuration files, visual theme, ML model data, and runtime packages.
  Install this package for a complete Autoware setup.
