Create a installation test for 1.5.0/amd64

--- a/1.5.0/amd64/justfile
+++ b/1.5.0/amd64/justfile
@@ -70,6 +70,10 @@ localrepo:
 
     echo "✓ autoware-localrepo built with $count bundled packages"
 
+# Test localrepo installation in a clean Docker container
+test:
+    ./test/run.sh
+
 # Clean all build artifacts
 clean:
     @echo "Cleaning..."
