--- a/1.5.0/amd64/justfile
+++ b/1.5.0/amd64/justfile
@@ -22,13 +22,19 @@ ros:
 
 # Build meta-packages (except autoware-localrepo which needs the repo first)
 meta:
-    @echo "Building meta-packages..."
-    cd packages/autoware-config && dpkg-buildpackage -us -uc -b
-    cd packages/autoware-theme && dpkg-buildpackage -us -uc -b
-    cd packages/autoware-data && dpkg-buildpackage -us -uc -b
-    cd packages/autoware-runtime && dpkg-buildpackage -us -uc -b
+    #!/usr/bin/env bash
+    set -e
+    echo "Building meta-packages (parallel)..."
+
+    # Build independent packages in parallel
+    parallel --halt now,fail=1 \
+        'cd packages/{} && dpkg-buildpackage -us -uc -b' \
+        ::: autoware-config autoware-theme autoware-data autoware-runtime
+
+    # Build autoware-full last (depends on the others)
     cd packages/autoware-full && dpkg-buildpackage -us -uc -b
-    @echo "✓ Meta-packages built"
+
+    echo "✓ Meta-packages built"
 
 # Create repo and build autoware-localrepo with bundled packages
 localrepo:
