[1.5.0/amd64] Add .gitignore files to ignore Debian build artifacts

--- a/1.5.0/amd64/packages/.gitignore
+++ b/1.5.0/amd64/packages/.gitignore
@@ -1,7 +1,9 @@
-# Build artifacts
+# Debian build artifacts
 *.deb
 *.buildinfo
 *.changes
+*.ddeb
 
-# Bundled repo for autoware-localrepo
-autoware-localrepo/repo/
+# Package build directories (staging areas)
+*/debian/*/
+!*/debian/source/
