--- a/2025.02/jp60/packages/.gitignore
+++ b/2025.02/jp60/packages/.gitignore
@@ -1,4 +1,9 @@
-# Build artifacts
+# Debian build artifacts
 *.deb
 *.buildinfo
 *.changes
+*.ddeb
+
+# Package build directories (staging areas)
+*/debian/*/
+!*/debian/source/
