[1.5.0/amd64] Add setup-prerequisites.sh and uninstall-autoware.sh scripts

--- a/1.5.0/amd64/packages/autoware-localrepo/debian/rules
+++ b/1.5.0/amd64/packages/autoware-localrepo/debian/rules
@@ -14,6 +14,11 @@ override_dh_auto_install:
 	install -d $(CURDIR)/debian/autoware-localrepo/opt/autoware/1.5.0/repo
 	cp -r repo/* $(CURDIR)/debian/autoware-localrepo/opt/autoware/1.5.0/repo/
 
+	# Install helper scripts
+	install -d $(CURDIR)/debian/autoware-localrepo/usr/share/autoware
+	install -m 755 src/setup-prerequisites.sh $(CURDIR)/debian/autoware-localrepo/usr/share/autoware/
+	install -m 755 src/uninstall-autoware.sh $(CURDIR)/debian/autoware-localrepo/usr/share/autoware/
+
 override_dh_strip:
 	# Skip stripping - contains .deb files, not executables
 
