--- a/1.5.0/amd64/packages/autoware-full/debian/control
+++ b/1.5.0/amd64/packages/autoware-full/debian/control
@@ -11,7 +11,7 @@ Depends: ${misc:Depends},
          autoware-config,
          autoware-theme,
          autoware-data,
-         autoware-runtime
+         autoware-ros-packages
 Description: Autoware complete installation meta-package
  This meta-package installs all Autoware components including
  configuration files, visual theme, ML model data, and runtime packages.
